--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
         "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --no-progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js"
     },
     "dependencies": {
+        "@types/axios": "^0.14.0",
         "@types/react": "^16.8.18",
         "@types/react-dom": "^16.8.4",
         "axios": "^0.18",
@@ -31,8 +32,6 @@
         "css-loader": "^2.1.1",
         "eslint": "^5.16.0",
         "laravel-mix": "^4.0.7",
-        "mini-css-extract-plugin": "^0.7.0",
-        "node-sass": "^4.12.0",
         "resolve-url-loader": "^2.3.1",
         "sass": "^1.15.2",
         "sass-loader": "^7.1.0",
