--- a/package.json
+++ b/package.json
@@ -32,9 +32,11 @@
         "css-loader": "^2.1.1",
         "eslint": "^5.16.0",
         "laravel-mix": "^4.0.7",
+        "laravel-mix-tailwind": "^0.1.0",
         "resolve-url-loader": "^2.3.1",
         "sass": "^1.15.2",
         "sass-loader": "^7.1.0",
+        "tailwindcss": "^1.0.2",
         "ts-loader": "^6.0.1",
         "vue": "^2.5.17",
         "vue-template-compiler": "^2.6.10",
